src/objects/Attendee__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Registered__c</fullName>
        <label>Date Registered</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>Attendees</relationshipLabel>
        <relationshipName>Attendees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Registration_Message__c</fullName>
        <label>Registration Message</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Attendee</label>
    <nameField>
        <label>Attendee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>